<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorGrey" />

    <!--头部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        tools:ignore="RtlSymmetry">

        <com.liheyu.weibo.ui.CircleImage
            android:id="@+id/user_icon"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:scaleType="centerCrop"
            android:src="@drawable/weibo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTheme" />

            <TextView
                android:id="@+id/weibo_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_index_fragment" />

        </LinearLayout>
    </LinearLayout>


    <!--内容-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/forward"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weibo_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/test"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/weibo_img"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="fitStart"
                android:src="@drawable/weibo" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey" />
    <!--底部-->
    <LinearLayout
        android:id="@+id/list_item_bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="14dp"
                android:contentDescription="@string/forward"
                android:src="@drawable/forward" />

            <TextView
                android:id="@+id/forward_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="20"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:contentDescription="@string/comment"
                android:src="@drawable/comment" />

            <TextView
                android:id="@+id/comment_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="50"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/isLikeImage"
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:contentDescription="@string/like"
                android:src="@drawable/like1" />

            <TextView
                android:id="@+id/like_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="520"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey" />

</LinearLayout>