<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.IndexActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.ToolBar">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.liheyu.weibo.ui.ChangeColorIconWithText
            android:id="@+id/id_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/colorTheme"
            app:icon="@drawable/index"
            app:text="@string/tab_index"
            app:text_size="11sp" />

        <com.liheyu.weibo.ui.ChangeColorIconWithText
            android:id="@+id/id_notice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/colorTheme"
            app:icon="@drawable/notice"
            app:text="@string/tab_notice"
            app:text_size="11sp" />

        <com.liheyu.weibo.ui.ChangeColorIconWithText
            android:id="@+id/id_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="@color/colorTheme"
            app:icon="@drawable/my"
            app:text="@string/tab_my"
            app:text_size="11sp" />

    </LinearLayout>


</LinearLayout>