<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:gravity="center_horizontal">

        <com.liheyu.weibo.ui.CircleImage
            android:id="@+id/user_icon"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:scaleType="centerCrop"
            android:src="@drawable/weibo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTheme"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/comment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/comment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11-23 16:25" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/comment_is_like"
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:contentDescription="@string/like"
                android:src="@drawable/like1" />

            <TextView
                android:id="@+id/like_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="520"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

    </LinearLayout>

</LinearLayout>